--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,7 +1,7 @@
-@import 'variables';
+@import '_variables';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Montserrat:wght@500&display=swap');
-
+@import '_mixins';
 body {
   font-family: 'Montserrat', sans-serif;
   color: $text-black;
@@ -66,11 +66,7 @@ body {
 }
 
 .form-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+ @include flexCenter(column);
   background-image: url("../assets/orchidLogin.jpg");
   background-size: cover;
   background-position: center;
@@ -92,7 +88,6 @@ body {
   border-radius: 50%;
 }
 .info-icon{
-  //background:$bg-yellow;
   color: $bg-yellow;
 
 }
